noinst_LIBRARIES = libnnodes.a

INCLUDES = \
	-I../includes \
	-I../libmm \
	-I../libhl \
	-I../libmisc \
	-I../libxml \
	-I../libnet \
	-I../libdns \
	-I../librdb \
	-I../libtopt \
	-I../libmon \
	-I../libast \
	-I../liblog

libnnodes_a_SOURCES = \
	lookup.c \
	read.c \
	write.c

headers = \
	nnodes.h
