noinst_LIBRARIES = librdb.a

INCLUDES = \
	-I../includes \
	-I../libmm \
	-I../libhl \
	-I../libmisc \
	-I../libdns \
	-I../libxml \
	-I../librdb \
	-I../libmon \
	-I../libast \
	-I../liblog \
	-I../libnnodes

librdb_a_SOURCES = \
	a.c \
	cname.c \
	mx.c \
	ns.c \
	ptr.c \
	soa.c \
	txt.c \
	zone.c \
	zones.c \
	rdb.c \
	options.c \
	rr.c \
	monitors.c \
	acls.c \
	common.c

headers = \
	rdb.h
