INCLUDES = \
	-I../includes \
	-I../libmm \
	-I../libhl \
	-I../libmisc \
	-I../libxml \
	-I../libnet \
	-I../libdns \
	-I../librdb \
	-I../libtopt \
	-I../libmon \
	-I../libast \
	-I../libnnodes \
	-I../libvthttp \
	-I../liblog


bin_PROGRAMS = nnodes
nnodes_SOURCES = \
	unix.c

nnodes_LDADD = \
	../libhl/libhl.a \
	../libnet/libnet.a \
	../libdns/libdns.a \
	../librdb/librdb.a \
	../libxml/libxml.a \
	../libmisc/libmisc.a \
	../libmm/libmm.a \
	../libmon/libmon.a \
	../libast/libast.a \
	../libtopt/libtopt.a \
	../liblog/liblog.a \
	../libnnodes/libnnodes.a \
	../libvthttp/libvthttp.a \
	../libhl/libhl.a \
	../libnet/libnet.a \
	../libdns/libdns.a \
	../librdb/librdb.a \
	../libxml/libxml.a \
	../libmisc/libmisc.a \
	../libmm/libmm.a \
	../libmon/libmon.a \
	../libast/libast.a \
	../libtopt/libtopt.a \
	../liblog/liblog.a \
	../libnnodes/libnnodes.a \
	../libvthttp/libvthttp.a \
	$(GEOIP_LIBS) \
	-lpthread
		
nnodes_DEPENDENCIES = \
	../libhl/libhl.a \
	../libnet/libnet.a \
	../libdns/libdns.a \
	../librdb/librdb.a \
	../libxml/libxml.a \
	../libmisc/libmisc.a \
	../libmm/libmm.a \
	../libmon/libmon.a \
	../libast/libast.a \
	../libtopt/libtopt.a \
	../liblog/liblog.a \
	../libvthttp/libvthttp.a \
	../libnnodes/libnnodes.a
