INCLUDES = \
	-I../../src/includes \
	-I../../src/libmm \
	-I../../src/libhl \
	-I../../src/libmisc \
	-I../../src/libxml \
	-I../../src/libnet \
	-I../../src/libdns \
	-I../../src/librdb \
	-I../../src/libtopt \
	-I../../src/libast \
	-I../../src/libmon \
	-I../../src/liblog \
	-I../../src/libnnodes
	
noinst_PROGRAMS         = lookup config
lookup_SOURCES      	= lookup.c
lookup_LDADD        	= \
	../../src/libhl/libhl.a \
	../../src/libnet/libnet.a \
	../../src/libdns/libdns.a \
	../../src/librdb/librdb.a \
	../../src/libxml/libxml.a \
	../../src/libmisc/libmisc.a \
	../../src/libmm/libmm.a \
	../../src/libmon/libmon.a \
	../../src/libtopt/libtopt.a \
	../../src/liblog/liblog.a \
	../../src/libast/libast.a \
	../../src/libnnodes/libnnodes.a \
	../../src/libhl/libhl.a \
	../../src/libnet/libnet.a \
	../../src/libdns/libdns.a \
	../../src/librdb/librdb.a \
	../../src/libxml/libxml.a \
	../../src/libmisc/libmisc.a \
	../../src/libmm/libmm.a \
	../../src/libmon/libmon.a \
	../../src/libtopt/libtopt.a \
	../../src/liblog/liblog.a \
	../../src/libnnodes/libnnodes.a \
	$(GEOIP_LIBS)

lookup_DEPENDENCIES = \
	../../src/libhl/libhl.a \
	../../src/libnet/libnet.a \
	../../src/libdns/libdns.a \
	../../src/librdb/librdb.a \
	../../src/libxml/libxml.a \
	../../src/libmisc/libmisc.a \
	../../src/libmm/libmm.a \
	../../src/libmon/libmon.a \
	../../src/libtopt/libtopt.a \
	../../src/libast/libast.a \
	../../src/liblog/liblog.a \
	../../src/libnnodes/libnnodes.a

	
config_SOURCES      	= config.c
config_LDADD        	= \
	../../src/libhl/libhl.a \
	../../src/libnet/libnet.a \
	../../src/libdns/libdns.a \
	../../src/librdb/librdb.a \
	../../src/libxml/libxml.a \
	../../src/libmisc/libmisc.a \
	../../src/libmm/libmm.a \
	../../src/libmon/libmon.a \
	../../src/libtopt/libtopt.a \
	../../src/liblog/liblog.a \
	../../src/libast/libast.a \
	../../src/libnnodes/libnnodes.a \
	../../src/libhl/libhl.a \
	../../src/libnet/libnet.a \
	../../src/libdns/libdns.a \
	../../src/librdb/librdb.a \
	../../src/libxml/libxml.a \
	../../src/libmisc/libmisc.a \
	../../src/libmm/libmm.a \
	../../src/libmon/libmon.a \
	../../src/libtopt/libtopt.a \
	../../src/liblog/liblog.a \
	../../src/libnnodes/libnnodes.a \
	$(GEOIP_LIBS)

config_DEPENDENCIES = \
	../../src/libhl/libhl.a \
	../../src/libnet/libnet.a \
	../../src/libdns/libdns.a \
	../../src/librdb/librdb.a \
	../../src/libxml/libxml.a \
	../../src/libmisc/libmisc.a \
	../../src/libmm/libmm.a \
	../../src/libmon/libmon.a \
	../../src/libtopt/libtopt.a \
	../../src/libast/libast.a \
	../../src/liblog/liblog.a \
	../../src/libnnodes/libnnodes.a
	